Fix overflow.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 #footer {
   display: flex;
-  width: 100vw;
+  width: 100%;
   background: #4B4B4B;
   height: 25vh;
   margin-top: 64px;
