--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -142,7 +142,7 @@
   #navigation-wrapper {
     height: 450px;
   }
-  #left-side {
+  #left-side, #right-corner {
    display: none;
   }
 }
